--- a/pelican-sober-master/templates/article_summary.inc.html
+++ b/pelican-sober-master/templates/article_summary.inc.html
@@ -2,7 +2,8 @@
   {% include 'metadata.inc.html' %}
   <div>
     <h2>
-      <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a>
+      <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" 
+	      title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a>
     </h2>
     <p>{{ article.summary }}</p>
   </div>
