--- a/output/theme/css/main.css
+++ b/output/theme/css/main.css
@@ -12,7 +12,8 @@ Colors :
 @import url("fonts.css");
 @import url("tinytypo.css");
 @import url("pygment.css");
-
+@import url(http://fonts.googleapis.com/css?family=Cabin+Sketch:400,700);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,700italic);
 
 /* Layout */
 
@@ -98,7 +99,8 @@ header .feeds a {
   display: block;
   float: right;
   padding-right: 5px;
-  width: 40px;
+  padding-left: 5px;
+  width: 48px;
 }
 
 header .feeds a:hover,
@@ -164,7 +166,6 @@ a:hover, a:active {
 }
 
 pre {
-  font-family: 'Source Code Pro',monospace;
   background: none repeat scroll 0 0 #F0F0F0;
   border-radius: 2px;
   font-size: 0.9em;
@@ -183,7 +184,6 @@ hr {
   border-radius: 5px;
 }
 
-
 /* Article */
 
 article.summary {
@@ -195,26 +195,28 @@ article.summary > div {
   margin-left: 28%;
 }
 
-article.full .metadata,
-article.summary .metadata {
-  font-style: italic;
-  text-align: left;
+article.full .metadata, 
+article.summary .metadata{
+  padding: 1%;
+  font-style: italic; 
+  text-align: right;
 }
 
 article.full .metadata {
   width: 25%;
-  float: left;
+  float: right;
+  margin: 0 0 2% 1% ;
 }
 
 article.summary .metadata {
   width: 23%;
   float: left;
+  margin: 0 1% 2% 0;
 }
 
 .metadata p,
 .metadata address {
-	margin: 0
-	text-align: left;
+	text-align: right;
 }
 
 /* Listings */
