--- a/pelican-sober-master/templates/article_summary.inc.html
+++ b/pelican-sober-master/templates/article_summary.inc.html
@@ -1,10 +1,8 @@
 <article class="summary">
-  {% include 'metadata.inc.html' %}
   <div>
-    <h1>
-      <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" 
-	      title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a>
-    </h1>
+    <h2>
+      <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a>
+    </h2>
     <p>{{ article.summary }}</p>
   </div>
 </article>
