--- a/random-theme/templates/base.html
+++ b/random-theme/templates/base.html
@@ -7,6 +7,7 @@
   <link href="{{ SITEURL }}/theme/css/ripples.min.css" rel="stylesheet">
   <link href="{{ SITEURL }}/theme/css/roboto.min.css" rel="stylesheet">
   <link href="{{ SITEURL }}/theme/css/custom.css" rel="stylesheet">
+  <link href="{{ SITEURL }}/theme/css/pygment.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
